fix: hides scrollbar in tabs with overflowing tabs, closes #1259

--- a/src/admin/components/forms/field-types/Tabs/index.scss
+++ b/src/admin/components/forms/field-types/Tabs/index.scss
@@ -33,6 +33,12 @@
   &__tabs-wrap {
     overflow: auto;
     margin-bottom: $baseline;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+
+    &::-webkit-scrollbar {
+      display: none;
+    }
   }
 
   &__tabs {
